bailey/log/build_2021-06-18_15-19-21/bailey_drive/stderr.log
  File "/home/ubuntu/Software/ROS2/Bailey_2/bailey/install/bailey_drive/lib/python3.8/site-packages/bailey_drive/bailey_drive.py", line 70
    import .stepper_lib  as RpiMotorLib
           ^
SyntaxError: invalid syntax

